ENTREGA_P3_SEMANTICO/P3_MARCO_GARCIA_PABLO_ROIG/tests/invalid/11_logic_on_int.lava
int a = 5;
int b = 3;
boolean c = a && b;
